--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body{
 
 .header .top-links{
     display:flex;
-    color: white;
+    color: #e5e7eb;
+    font-size: 18px;
     list-style: none;
     padding: 0;
     margin: 0;
