--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ body{
 
 .header1{     
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-between;    
     padding: 10px;
     background-color: #1f2937;
     width: auto;
     height: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
+    
     
     
 }
@@ -18,8 +21,7 @@ body{
     font-size: 24px;
     color: #f9faf8;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    
     
 }
 
@@ -29,17 +31,21 @@ body{
     font-size: 18px;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 0;
+    
     gap: 15px;
    
 }
 
 .header2{
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-between;
+    width: auto;
+    height: 100%;    
     padding: 10px;
     background-color: #1f2937;
-    
+    padding-left: 200px;
+    padding-right: 200px;
     
    
 }
@@ -47,21 +53,24 @@ body{
 .header2 h1{
     font-size: 48px;
     color: #f9faf8;
+    
 }
 
 .header2 p{
     font-size: 18px;
     font-weight: 900;
     color:#e5e7eb;
+   
 }
 
 .header2-image{
    display: flex;   
+   
 
 }
 
 .header2-image img{   
-    width:100%;
-    height:100%;
+ width: 100%;
+ height: 100%;   
 }
 
