--- a/style.css
+++ b/style.css
@@ -11,30 +11,28 @@ body{
     width: auto;
     height: 100px;
     padding-left: 200px;
-    padding-right: 200px;
-    
-    
-    
+    padding-right: 200px;    
 }
 
 .header1 .logo{     
     font-size: 24px;
     color: #f9faf8;
     list-style: none;
-    
-    
 }
 
 .header1 .top-links{
     display:flex;
-    color: #e5e7eb;
+    
     font-size: 18px;
     list-style: none;
     padding: 0;
-    margin-top: 0;
-    
+    margin-top: 0;    
     gap: 15px;
-   
+}
+
+.header1 .top-links a{
+    text-decoration: none;
+    color: #e5e7eb;
 }
 
 .header2{
@@ -58,6 +56,7 @@ body{
     font-size: 18px;
     font-weight: 900;
     color:#e5e7eb;
+    
 }
 
 .header2-image{
