--- a/style.css
+++ b/style.css
@@ -56,16 +56,17 @@ body{
     font-size: 18px;
     font-weight: 900;
     color:#e5e7eb;
+    width: 75%;
     
 }
 
 .header2-image{
-   display: flex;   
+   display: flex;  
 }
 
 .header2-image img{   
  width: 100%;
- height: 100%;   
+ height: 100%;  
 }
 
 .info-header{
