--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+
 body{
     font-family: Roboto;
+    margin: 0;
+    
 }
 
 
@@ -7,11 +10,11 @@ body{
     display: flex;
     justify-content: space-between;    
     padding-top: 10px;
-    background-color: #1f2937;
-    width: auto;
-    height: 100px;
+    background-color: #1f2937;    
     padding-left: 200px;
-    padding-right: 200px;    
+    padding-right: 200px; 
+    margin: 0;
+     
 }
 
 .header1 .logo{     
@@ -38,13 +41,13 @@ body{
 .header2{
     display: flex;
     justify-content: space-between;
-    width: auto;
-    height: 100%; 
+   
     padding-top: 50px;   
     padding-bottom: 100px;
     background-color: #1f2937;
     padding-left: 200px;
     padding-right: 200px;
+    
 }
 
 .header2 h1{
