--- a/style.css
+++ b/style.css
@@ -84,19 +84,38 @@ body{
     
 }
 
-.square-images *{
-    display: flex;
+.square-images {
+    display: flex;    
     justify-content: center;
-    gap: 30px;
     margin: 0;
-    padding: 0;
+    padding-bottom: 100px;
     list-style: none;
 
     
 }
+
+.square-images ul{
+    display: flex;
+    list-style: none;
+    gap: 30px;
+   
+    
+}
+
+
   
 .square-images img{
 width: 180px;
 height: 180px;
 border-radius: 25px;
+
+
 }
+
+
+.square-images .caption{
+    width: 180px;
+    
+}
+    
+
