--- a/style.css
+++ b/style.css
@@ -177,6 +177,9 @@ border-radius: 25px;
 .footer {
     display: flex;
     justify-content: center;
+    background-color: #3882f6;
+    margin: 100px 300px;
+    border-radius: 10px;
     
     
     
@@ -195,29 +198,39 @@ border-radius: 25px;
 }
 
 .action h2{
-
+    color: #f9faf8;
+    font-size: 36px;
 }
 
      
 .action p{
+    color: #f9faf8;
+    font-size: 18px;
+}
 
+.sign-up2{
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;    
+    width: 200px;
+    border: none;
+    
 }
 
 .sign-up2 p{
     width: 100px;
     color: #f9faf8;
-    background-color: #3882f6;
-
     font-size: 18px;
     font-weight: bold;
+    
+
 }
 
 .sign-up2 a{
     text-decoration: none;
+   
 }
 
     
 
     
-
-
