--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ border-radius: 25px;
     justify-content: flex-end;
     color: #1f2937;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 24px;
     width: 800px;
     
 }
@@ -192,7 +192,9 @@ border-radius: 25px;
     background-color: #3882f6;
     border-radius: 10px;
     width: 500px;
+    padding: 40px;
     
+        
    
     
 }
@@ -200,12 +202,20 @@ border-radius: 25px;
 .action h2{
     color: #f9faf8;
     font-size: 36px;
+    padding: 0;
+    margin: 0;
+   
+    
+
 }
 
      
 .action p{
     color: #f9faf8;
     font-size: 18px;
+    padding: 0;
+    margin: 0;
+   
 }
 
 .sign-up2{
@@ -218,21 +228,22 @@ border-radius: 25px;
     
 }
 
+
+
 .sign-up2 p{
     width: 100px;
     color: #f9faf8;
     font-size: 18px;
     font-weight: bold;
-    
-
-    
+    border: solid;
+    border-color:#f9faf8;
+    border-radius: 10px;
+    padding: 10px 20px;
 
 }
 
 .sign-up2 a{
-    text-decoration: none;
-    
-   
+    text-decoration: none;   
 }
 
     
