--- a/style.css
+++ b/style.css
@@ -68,16 +68,19 @@ body{
     display: flex;
     justify-content: center;
     border-radius: 10px;
-    width: 200px;
+    border: none;
+    width: 150px;
+    padding: 0;
+    margin: 0;
     
 }
 
 .sign-up p{
-    width: 100px;
+    width: 150px;
     color: #f9faf8;
     font-size: 18px;
     font-weight: bold;
-
+    margin: 10px;
 }
 
 .sign-up a{
@@ -179,12 +182,8 @@ border-radius: 25px;
     justify-content: space-evenly;
     background-color: #3882f6;
     margin: 100px 300px;
-    border-radius: 10px;
+    border-radius: 10px; 
     
-    
-    
-   
-
 }
 
 
@@ -193,9 +192,6 @@ border-radius: 25px;
     border-radius: 10px;
     width: 500px;
     padding: 40px;
-    
-        
-   
     
 }
 
