Modify color of .action text

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ border-radius: 25px;
 
      
 .action p{
-    color: #f9faf8;
+    color:#e5e7eb;
     font-size: 18px;
     padding: 0;
     margin: 0;
